2017-11-07  Jonathan Kew  <jfkthame@gmail.com>

	* XeTeX_ext.c: Guard against out-of-range result from UTF-8
	decoding, and return U+FFFD Replacement Character instead
	to avoid a crash for invalid inputs (from A. Kakuto).

2017-09-24  Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>

	* xetex.web: Avoid overwriting prim_* entries by primitive().

2017-09-05  Karl Berry  <karl@tug.org>
        and Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetexdir/XeTeX_ext.c (IS_SPC_OR_EOL): new macro.
	(input_line): use it, instead of ISBLANK.
	See also analogous change in lib/texmfmp.c.
	Original bug report from Evan Aad,
	http://tug.org/pipermail/tex-k/2017-August/002801.html

2017-08-06  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdfimage.cpp: Support /Rotate in PDF image inclusion with
	the new xdvipdfmx-20170806.

2017-07-17  Jonathan Kew  <jfkthame@gmail.com>

	* xetex.ch: Set a non-zero exit code if the pipe
	to the output driver closes with a non-zero code.

2017-04-27  Karl Berry  <karl@tug.org>

	* am/xetex.am (xetex_ldadd): add $(ICU_LIBS_EXTRA).

2017-04-22  Jonathan Kew  <jfkthame@gmail.com>

	* xetex.web, xetex_version.h, NEWS: Fixed long-standing bug that made
	\ifcat\span...\fi (and similar constructions with \cr, \crcr) behave
	incorrectly. Also fixed initialization of \delcode values for
	supplementary-plane characters. version 0.99998.

2017-03-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Sync with the upstream (version 0.99997).

2017-03-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* Sync with the upstream.

2016-10-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeXOTMath.cpp: Sync with the upstream.

2016-09-25  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* MathTable.h, XeTeXOTMath.cpp: Sync with the upstream.

2016-09-24  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* xetex.web: Sync with the upstream.

2016-02-09  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* XeTeX_ext.c: Revert the change on 2015-11-06.